@@ -1,4 +1,17 @@
 # Javass
 
-Fun with Beans and Jass 
-by LupusMalus and Hannahnas
+Javass let's you play Jass with your friends as well as the computer!
+
+## Requirements
+
+Javass requires [Java 11](https://www.oracle.com/java/technologies/javase/jdk11-archive-downloads.html) as well as [JavaFX 11](https://gluonhq.com/products/javafx/)
+
+## Usage
+
+In the top-level folder of the repository, run:
+
+```
+java --module-path path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls -jar ./classes/artifacts/cs108_projet_jar/cs108-projet.jar
+```
+
+Made by lupusmalus and hannahnas
